Taharial checking. Based on Velox theme. Customized for the de-swaef.com blog

--- a/default.hbs
+++ b/default.hbs
@@ -35,19 +35,16 @@
   {{ghost_head}}
 </head>
 <body>
+  
+  {{> facebook-comments-include}}
 
   {{{body}}}
 
   <footer class="blog_info margin_top_big padding_medium text center">
     <h5 class="text book small">&copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. All rights reserved.</h5>
-    <h5 class="text book small"><a href="https://github.com/dreyacosta/velox" target="_blank" class="text bold">Velox theme</a> by <a href="http://dreyacosta.com/">David Rey</a></h5>
     <h5 class="text book small">Proudly published with <a href="http://ghost.org"><span>Ghost</span></a></h5>
   </footer>
 
-  {{!
-    Here, you can add Google Analytics.
-    Also go to partials/google-analytics.hbs to set your ID and DOMAIN.
-  }}
-  {{!> google-analytics}}
+  {{> google-analytics}}
 </body>
 </html>
