--- a/partials/nav-menu.hbs
+++ b/partials/nav-menu.hbs
@@ -1,6 +1,5 @@
 <div class="social border solid top_small bottom_small padding_medium">
-  <h6 class="text book color c_black_medium without_margin padding_right_big"><a href="/about-me"><i class="fa fa-user"></i> <span class="margin_left_small desktop">About me</span></a></h6>
-  <h6 class="text book color c_black_medium without_margin padding_right_big"><a href="//es.linkedin.com/in/dreyacosta" target="_blank"><i class="fa fa-linkedin-square"></i> <span class="margin_left_small desktop">Linkedin</span></a></h6>
-  <h6 class="text book color c_black_medium without_margin padding_right_big"><a href="//twitter.com/dreyacosta" target="_blank"><i class="fa fa-twitter-square"></i> <span class="margin_left_small desktop">Twitter</span></a></h6>
-  <h6 class="text book color c_black_medium without_margin"><a href="//github.com/dreyacosta" target="_blank"><i class="fa fa-github"></i> <span class="margin_left_small desktop">GitHub</span></a></h6>
+  <h6 class="text book color c_black_medium without_margin padding_right_big"><a href="https://www.linkedin.com/profile/view?id=92248346" target="_blank"><i class="fa fa-linkedin-square"></i> <span class="margin_left_small desktop">Linkedin</span></a></h6>
+  <h6 class="text book color c_black_medium without_margin padding_right_big"><a href="https://twitter.com/QuintenDes" target="_blank"><i class="fa fa-twitter-square"></i> <span class="margin_left_small desktop">Twitter</span></a></h6>
+  <h6 class="text book color c_black_medium without_margin"><a href="https://github.com/Qkyrie" target="_blank"><i class="fa fa-github"></i> <span class="margin_left_small desktop">GitHub</span></a></h6>
 </div>
